[gd_scene load_steps=5 format=3 uid="uid://igx4mkub228a"]

[ext_resource type="Script" uid="uid://bioqfp0af2gmr" path="res://battle_result_screen/character_result_container.gd" id="1_jfk61"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohg15"]
bg_color = Color(0.306099, 0.704418, 0.971658, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.635294)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2dnp"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mo1rr"]
bg_color = Color(1, 0.356846, 0.0697497, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="PanelContainer" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_ohg15")
script = ExtResource("1_jfk61")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 25
text = "PlayerX"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 25
text = "Level"

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 25
text = "x"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Exp"

[node name="ExpGainLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 20
text = "XXX"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "next"

[node name="ExpNetLevelLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 20
text = "xx"

[node name="ExpBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_r2dnp")
theme_override_styles/fill = SubResource("StyleBoxFlat_mo1rr")
step = 1.0
value = 25.0
show_percentage = false
